Fix card text overflow

--- a/style.css
+++ b/style.css
@@ -160,6 +160,12 @@ select:focus, select:focus-visible {
     font-size: 1.8rem;
     font-weight: 600;
     line-height: normal;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4; /* Limit to 2 lines */
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .book-author {
